// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Highlight /> spec renders the Highlight 1`] = `
<DocumentFragment>
  <div
    class="highlight custom-theme-1"
    role="region"
  >
    <div
      class="text"
    >
      You may select an highlight from the article to be displayed here. Select an excerpt that you want the user to pay attention to.
    </div>
  </div>
</DocumentFragment>
`;

exports[`<Highlight /> spec renders the Quote 1`] = `
<DocumentFragment>
  <div
    class="highlight custom-theme-2"
    role="region"
  >
    <div
      class="text quote"
    >
      Add an interesting quote here
    </div>
    <div
      class="reference"
    >
      ⁠First name Last name. Title.
    </div>
  </div>
</DocumentFragment>
`;
